--- a/views/viewSchedule.ejs
+++ b/views/viewSchedule.ejs
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js" ></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<link rel="stylesheet" href="../style.css">
+<link rel="stylesheet" href="../../style.css">
 <script>
     var schedulesConfig = []
     var urls = {}
@@ -86,7 +86,7 @@
         
     })
 </script>
-<script src="../main.js"></script> 
+<script src="../../main.js"></script> 
 
 <html>
     <head>
